# Beta-1

./: .gitignore  README.md  main.py  pyproject.toml
config/: models.json  settings.json
observability/: README.md  docker-compose.yml  otel-collector.yml  prometheus.yml  tempo.yml
src/: main.py  pipeline.py  workflow.py
src/agents/: registry.py
src/agents/autonomousagent/: autonomous_agent.py
src/agents/chatagent/: __init__.py  chat_agent.py  system_prompt.py
src/agents/codeagent/: __init__.py  agent_tools.py  code_agent.py  system_prompt.py
src/asr/: __init__.py  aec.py  asr_service.py  audio_stream.py  base.py  denoiser.py  factory.py  mlx_provider.py  noise_suppressor.py  turn_detector.py  vad.py  whisper_provider.py
src/cli/: panes.py  tui.py  widgets.py
src/config/: agent_registry.py  context.py  event_bus.py  events.py  global_events.py  global_queues.py  logger.py  settings.py  workflow_context.py
src/cost/: __init__.py  pricing.py  store.py
src/llms/: __init__.py  cost_tracker.py  factory.py  registry.py
src/observability/: __init__.py  latency_tracker.py  telemetry.py
src/prompts/: __init__.py  autonomous_agent.md  chat_agent.md  coding_agent.md  input_classifier.md  loader.py  planning_agent.md  research_agent.md  supervisor_agent.md  system_agent.md
src/scheduler/: __init__.py  models.py  scheduler_manager.py  task_store.py
src/states/: __init__.py  agent_state.py  main_state.py  supervisor_state.py
src/utils/: cli_old.py  errors.py  io.py  text_utils.py
src/voice/: __init__.py  base.py  base_provider.py  factory.py  kitten_provider.py  kokoro_provider.py  mlx_provider.py  supertonic_provider.py  tts_service.py
(+70 files in other folders)
