[project]
name = "beta-1"
version = "0.1.0"
description = "A personal assistant called beta-1"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "google-genai>=1.63.0",
    "langchain-google-genai>=4.2.0",
    "langgraph>=1.0.8",
    "apscheduler>=3.10",
    "supertonic>=1.0.0",
    "sounddevice>=0.4.6",
    "numpy>=1.26.0",
    "kokoro>=0.9.4",
    "soundfile",
    "kittentts @ https://github.com/KittenML/KittenTTS/releases/download/0.8.1/kittentts-0.8.1-py3-none-any.whl",
    "langchain>=1.2.15",
    "faster-whisper",
    "mlx-whisper",
    "silero-vad",
    "torchaudio",
    "langchain-openai>=1.1.14",
    "langchain-openrouter>=0.2.1",
    "textual>=8.2.4",
    "textual-dev>=1.8.0",
    "kokoro-onnx>=0.3.3",
    "langchain-nvidia-ai-endpoints>=1.2.1",
    "pyaec>=1.0.1",
    "aec-audio-processing>=1.0.1",
    "soxr>=0.5.0",
    "langchain-core>=1.3.0",
    "ddgs>=9.14.2",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp-proto-http>=1.27.0",
]
